:sparkles: support casdoor login (#5)
